--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,19 @@ body {
 }
 
 
+@keyframes moveInButtom {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+
 .btn:link, 
 .btn:visited {
     text-transform: uppercase;
@@ -118,6 +131,7 @@ body {
     display: inline-block;
     border-radius: 100px;
     transition: all .2s;
+    position: relative;
 }
 
 .btn:hover {
@@ -133,4 +147,32 @@ body {
 .btn-white {
     background-color: #fff;
     color: #777;
+}
+
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s
+}
+
+.btn-white::after {
+    background-color: #fff;
+    
+}
+
+.btn:hover::after {
+    transform: scale(1.4) scale(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInButtom 1s ease-in;
+    animation-fill-mode: forwards;
 }
