--- a/css/style.css
+++ b/css/style.css
@@ -180,15 +180,31 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    backface-visibility: hidden .card__side --front;
-      backface-visibility-background-color: purple; }
+    backface-visibility: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: #fff; }
     .card__side--back {
-      background-color: green;
+      background-color: #233423;
       transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
   .card:hover .card__side--front {
-    transform: rotateY(180deg); }
+    transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen; }
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../../img/seun-kikiowo-lg-3.jpg); }
+    .card__picture--2 {
+      background-image: url(../../img/seun-kikiowo-lg-3.jpg); }
+    .card__picture--3 {
+      background-image: url(../../img/seun-kikiowo-lg-3.jpg); }
 
 .composition {
   position: relative; }
