--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -12,25 +12,55 @@
         top: 0;
         left: 0;
         width: 100%;
-        backface-visibility: hidden
+        backface-visibility: hidden;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         
         &--front {
-            background-color: purple;
+            background-color: $color-white;
         }
         
         &--back {
-            background-color: green;
+            background-color: rgb(35, 52, 35);
             transform: rotateY(180deg);
+
+            &-1 {
+                background-image: linear-gradient(to right bottom, $color-secondary-Light, $color-secondary-dark);
+            }
+            &-1 {
+                background-image: linear-gradient(to right bottom, $color-secondary-Light, $color-secondary-dark);
+            }
+
         }
         
     }
     
     &:hover &__side--front {
-        transform: rotateY(180deg);
+        transform: rotateY(-180deg);
     }
     
     &:hover &__side--back {
         transform: rotateY(0);
+    }
+
+
+
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: screen;
+
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, $color-secondary-Light, $color-secondary-dark), url(../../img/seun-kikiowo-lg-3.jpg);
+        }
+
+        &--2 {
+            background-image: url(../../img/seun-kikiowo-lg-3.jpg);
+        }
+
+        &--3 {
+            background-image: url(../../img/seun-kikiowo-lg-3.jpg);
+        }
     }
 
 }
