--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -31,6 +31,16 @@
             
         }
     }
+    
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+
+        &::after {
+            background-color: $color-primary;
+            
+        }
+    }
 
     &::after {
         content: "";
