--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,6 @@
 .btn {
   
+    &,
     &:link, 
     &:visited {
         text-transform: uppercase;
@@ -10,6 +11,10 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        // For button 
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -17,7 +22,9 @@
         box-shadow: 0 1rem 2rem rgba($color-black,.2);
     }
 
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 5px 1rem rgba($color-black,.2);
     }
