--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -58,15 +58,15 @@
 
         //  FONT SIDE STYLING
         &--1 {
-            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../../img/seun-kikiowo-lg-1.jpg);
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/seun-kikiowo-lg-1.jpg);
         }
 
         &--2 {
-            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(../../img/seun-kikiowo-lg-2.jpg);
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(../img/seun-kikiowo-lg-2.jpg);
         }
 
         &--3 {
-            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(../../img/seun-kikiowo-lg-3.jpg);
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(../img/seun-kikiowo-lg-3.jpg);
         }
     }
 
