--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -7,6 +7,34 @@
     background-color: rgba($color-black, .8);
     z-index: 9999;
 
+    opacity: 0;
+    visibility: hidden;
+    transition: all .2s;
+
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &__close {
+
+        &:link,
+        &:visited {
+            color: $color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            transition: all .2s;
+            line-height: 1;
+        }
+        
+        &:hover {
+            color: $color-primary;
+        }
+    }
 
     &__content {
         @include absCenter;
