--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -14,3 +14,41 @@
     transform: translate(-50%, -50%);
 }
 
+
+
+
+
+// MEDIA QUERY MANAGER
+/*
+
+0 - 600px:      Phone
+600px - 900px:  Tablet Portrait
+900px - 1200px: Tablet Landscape
+1200px - 1800px:Current style (Desktop first approach styling)
+1800px + :      Big desktop
+
+*/
+
+
+// use em not rem for media query
+// 1em = 16px
+// media query divided by 16px
+
+@mixin respond ($breakpoint) {
+
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content };  // 600px
+    }
+
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) { @content };     // 900px
+    }
+
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) { @content };    // 1200px
+    }
+
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) { @content };    // 1800px
+    }
+}
