--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
     font-size: $default-font-size;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -21,6 +20,11 @@ body {
     
         animation-name: moveInLeft;
         animation-duration: 3s;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+            font-family: 5rem;
+        }
     }
     
     &--sub {
@@ -31,6 +35,10 @@ body {
     
         animation-name: moveInRight;
         animation-duration: 3s;
+
+        @include respond(phone) {
+            letter-spacing: 1.2rem;
+        }
     }
 }
 
@@ -46,6 +54,14 @@ body {
     color: transparent;
     letter-spacing: 2px ;
     transition: all .2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: skewx(-5deg) scale(1.1);
