--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -150,7 +150,10 @@
     // MEDIA QUERY
     // MEDIA QUERY
 
-    @include respond(tab-port) {
+    // @include respond(tab-port) {
+
+        @media only screen and (max-width: 56.25em),
+                only screen and (hover: none) {
         height: auto;
         border-radius: .5rem;
         background-color: $color-white;
